discussion/kv_engine/148066/148066_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44807: get_collection|scope_id: allow 'path' input as key or value

The max scope name + collection name exceeds the limit of the
protocol key field. This commit changes both get_scope_id and
get_collection_id so that the input can be encoded in the key
or the value.

This is temporary to alleviate migration to updated clients,
long term only the input via value will be accepted.

Change-Id: I609bbb9c3ba4ebd3c07d6019523b300d0de79f63

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-03-09 15:48:27.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-09 16:30:14.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7537/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/test_manifest.h:46:11: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
constexpr char maxCollection[] =
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/utilities/test_manifest.h:103:11: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
constexpr char maxScope[] =
          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7537/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34143/ : FAILURE

Failure of GoogleTest "CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false":

<pre>
[ RUN      ] CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false
..\kv_engine\tests\mcbp\mcbp_test.cc(89): error: Expected equality of these values:
  expectedStatus
    Which is: Invalid arguments
  validatorChains.validate(opcode, cookie)
    Which is: Success
..\kv_engine\tests\mcbp\mcbp_test.cc(2895): error: Expected equality of these values:
  "Request must include key"
  validate_error_context(cb::mcbp::ClientOpcode::CollectionsGetID)
    Which is: ""
[  FAILED  ] CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false, where GetParam() = false (1 ms)
CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34143/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9507/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8211/ : FAILURE

Failure of GoogleTest "CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false":

<pre>
[ RUN      ] CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false
[2021-03-09T16:06:09.014Z] ../kv_engine/tests/mcbp/mcbp_test.cc:89: Failure
[2021-03-09T16:06:09.014Z] Expected equality of these values:
[2021-03-09T16:06:09.014Z]   expectedStatus
[2021-03-09T16:06:09.014Z]     Which is: Invalid arguments
[2021-03-09T16:06:09.014Z]   validatorChains.validate(opcode, cookie)
[2021-03-09T16:06:09.014Z]     Which is: Success
[2021-03-09T16:06:09.014Z] ../kv_engine/tests/mcbp/mcbp_test.cc:2895: Failure
[2021-03-09T16:06:09.014Z] Expected equality of these values:
[2021-03-09T16:06:09.014Z]   "Request must include key"
[2021-03-09T16:06:09.014Z]   validate_error_context(cb::mcbp::ClientOpcode::CollectionsGetID)
[2021-03-09T16:06:09.014Z]     Which is: ""
[2021-03-09T16:06:09.014Z] [  FAILED  ] CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false, where GetParam() = false (0 ms)
CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8211/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17056/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17056/ )

Failure of GoogleTest "CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/true":

<pre>
[ RUN      ] CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/true
[2021-03-09T16:27:37.056Z] ../kv_engine/tests/mcbp/mcbp_test.cc:89: Failure
[2021-03-09T16:27:37.056Z] Expected equality of these values:
[2021-03-09T16:27:37.056Z]   expectedStatus
[2021-03-09T16:27:37.056Z]     Which is: Invalid arguments
[2021-03-09T16:27:37.056Z]   validatorChains.validate(opcode, cookie)
[2021-03-09T16:27:37.056Z]     Which is: Success
[2021-03-09T16:27:37.056Z] ../kv_engine/tests/mcbp/mcbp_test.cc:2895: Failure
[2021-03-09T16:27:37.056Z] Expected equality of these values:
[2021-03-09T16:27:37.056Z]   "Request must include key"
[2021-03-09T16:27:37.056Z]   validate_error_context(cb::mcbp::ClientOpcode::CollectionsGetID)
[2021-03-09T16:27:37.056Z]     Which is: ""
[2021-03-09T16:27:37.056Z] [  FAILED  ] CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/true, where GetParam() = true (0 ms)
CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/true
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17056/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9152/ : FAILURE

Failure of GoogleTest "CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false":

<pre>
[ RUN      ] CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false
[2021-03-09T16:13:27.360Z] ../kv_engine/tests/mcbp/mcbp_test.cc:89: Failure
[2021-03-09T16:13:27.360Z] Expected equality of these values:
[2021-03-09T16:13:27.360Z]   expectedStatus
[2021-03-09T16:13:27.360Z]     Which is: Invalid arguments
[2021-03-09T16:13:27.360Z]   validatorChains.validate(opcode, cookie)
[2021-03-09T16:13:27.360Z]     Which is: Success
[2021-03-09T16:13:27.360Z] ../kv_engine/tests/mcbp/mcbp_test.cc:2895: Failure
[2021-03-09T16:13:27.360Z] Expected equality of these values:
[2021-03-09T16:13:27.360Z]   "Request must include key"
[2021-03-09T16:13:27.360Z]   validate_error_context(cb::mcbp::ClientOpcode::CollectionsGetID)
[2021-03-09T16:13:27.360Z]     Which is: ""
[2021-03-09T16:13:27.360Z] [  FAILED  ] CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false, where GetParam() = false (0 ms)
CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9152/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9294/ : FAILURE

Failure of GoogleTest "CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false":

<pre>
[ RUN      ] CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false
[2021-03-09T16:12:02.600Z] ../kv_engine/tests/mcbp/mcbp_test.cc:89: Failure
[2021-03-09T16:12:02.600Z] Expected equality of these values:
[2021-03-09T16:12:02.600Z]   expectedStatus
[2021-03-09T16:12:02.600Z]     Which is: Invalid arguments
[2021-03-09T16:12:02.600Z]   validatorChains.validate(opcode, cookie)
[2021-03-09T16:12:02.600Z]     Which is: Success
[2021-03-09T16:12:02.600Z] ../kv_engine/tests/mcbp/mcbp_test.cc:2895: Failure
[2021-03-09T16:12:02.600Z] Expected equality of these values:
[2021-03-09T16:12:02.600Z]   "Request must include key"
[2021-03-09T16:12:02.600Z]   validate_error_context(cb::mcbp::ClientOpcode::CollectionsGetID)
[2021-03-09T16:12:02.600Z]     Which is: ""
[2021-03-09T16:12:02.600Z] [  FAILED  ] CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false, where GetParam() = false (0 ms)
CollectionsOnOff/CommandSpecificErrorContextTest.CollectionsGetID/false
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9294/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6075/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29327/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
